--- a/IP Manager.csproj
+++ b/IP Manager.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\css\P2 Enhanced2 art.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.4">
       <PrivateAssets>all</PrivateAssets>
@@ -18,6 +22,19 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Views\Devices\" />
+    <Folder Include="Views\IP_Assignes\" />
+    <Folder Include="Views\Subnets\" />
+    <Folder Include="Views\Projects\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\css\P2 Enhanced2 art.png" />
+    <None Include="wwwroot\Pictures\P2 Enhanced2 art.png" />
   </ItemGroup>
 
 </Project>
